--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -15,6 +15,7 @@
 	<description>A project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
+		<org.springsecurity-version>5.0.2.RELEASE</org.springsecurity-version>
 	</properties>
 	
 	<dependencies>
@@ -69,6 +70,8 @@
 			<scope>test</scope>
 		</dependency>
 		
+		
+		<!-- 파일 업로드 -->
 		<dependency>
 			<groupId>com.servlets</groupId>
 			<artifactId>cos</artifactId>
@@ -85,13 +88,17 @@
 		    <version>2.6</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-config -->
-		<!--<dependency>
-		    <groupId>org.springframework.cloud</groupId>
-		    <artifactId>spring-cloud-starter-config</artifactId>
-		    <version>3.1.1</version>
-		</dependency> -->
-		
+		<!-- 스프링부트 시큐리티 -->
+    	<dependency>
+      		<groupId>org.springframework.boot</groupId>
+      		<artifactId>spring-boot-starter-security</artifactId>
+    	</dependency>
+		<dependency>
+      		<groupId>org.springframework.security</groupId>
+      		<artifactId>spring-security-test</artifactId>
+      		<scope>test</scope>
+    	</dependency>
+    	
 		<!-- Logging -->
 		
 		
@@ -134,6 +141,8 @@
 		    <artifactId>slf4j-api</artifactId>
 		    <version>2.0.0</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
+		 
+
 		
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
 		<dependency>
@@ -141,14 +150,6 @@
 		    <artifactId>spring-boot-starter-validation</artifactId>
 		    <version>2.7.3</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
-		
-		<!-- 파일 업로드 -->
-		<dependency>
-			<groupId>commons-fileupload</groupId>
-			<artifactId>commons-fileupload</artifactId> 
-			<version>1.4</version>
-		</dependency>
-		
 				
 	</dependencies>
 
